Add partial unit test for control protocol

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+test_ignore = test_desktop
 
 # library dependencies
 lib_deps = 
@@ -19,3 +20,11 @@ lib_deps =
     https://github.com/me-no-dev/AsyncTCP.git 
 
 monitor_speed = 115200
+
+
+[env:native]
+platform = native
+build_flags = -DMOCK_LOGGER
+lib_ignore = logger
+debug_test = test_desktop
+
