Exclude mock_logger on target build

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ test_ignore = test_desktop
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git 
     https://github.com/me-no-dev/AsyncTCP.git 
-
+lib_ignore = mock_logger
 monitor_speed = 115200
 
 
