Getting global values works

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,15 +16,16 @@ test_ignore = test_desktop
 
 # library dependencies
 lib_deps = 
-    https://github.com/me-no-dev/ESPAsyncWebServer.git 
-    https://github.com/me-no-dev/AsyncTCP.git 
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
+    bblanchon/ArduinoJson @ ^6.18.0
 lib_ignore = mock_logger
 monitor_speed = 115200
 
 
-[env:native]
-platform = native
-build_flags = -DMOCK_LOGGER
-lib_ignore = logger
-debug_test = test_desktop
+#[env:native]
+#platform = native
+#build_flags = -DMOCK_LOGGER
+#lib_ignore = logger
+#debug_test = test_desktop
 
