Print out Build ID on startup

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,8 @@ lib_deps =
     bblanchon/ArduinoJson @ ^6.18.0
 lib_ignore = mock_logger
 monitor_speed = 115200
-
+build_flags =
+    !python3 get_build_id.py
 
 #[env:native]
 #platform = native
