Add CPU utilization stats in system page

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,9 @@ lib_deps =
 lib_ignore = mock_logger
 monitor_speed = 115200
 build_flags =
-    !python3 get_build_id.py
+    !python3 scripts/get_build_id.py
+upload_port = COM4
+monitor_port = COM4
 
 #[env:native]
 #platform = native
