Implement json-based configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
     https://github.com/me-no-dev/AsyncTCP.git
     https://github.com/zmeiresearch/wireguard-lwip
     bblanchon/ArduinoJson @ ^6.18.0
+    bblanchon/StreamUtils @ ^1.6.0
 lib_ignore = mock_logger
 monitor_speed = 115200
 build_flags =
